# tensorflow-lite-sys

./: .gitignore  Cargo.toml  build.rs  memory.x  readme.md  wrapper.h
.cargo/: config
examples/: bluepill_micro_speech.rs  micro_speech.rs
